# awzars

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT.md  deny.toml
.cargo/: config.toml
src/: error.rs  lib.rs  main.rs
src/auth/: lock.rs  mod.rs
src/auth/aws/: mod.rs  sts.rs
src/auth/azure/: mod.rs  protocol.rs  saml.rs
src/auth/credentials/: mod.rs  pipeline.rs
src/browser/: chromium.rs  cookie_crypto.rs  mod.rs
src/browser/selectors/: mod.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: configure.rs  credential_process.rs  delete_profile.rs  list_roles.rs  lock.rs  login.rs  mod.rs  set_password.rs  tui.rs  unlock.rs
src/config/: azure_config.rs  cleanup.rs  mod.rs  profile.rs
src/credential_process/: mod.rs  protocol.rs
src/storage/: cache.rs  keyring.rs  mod.rs
src/tui/: app.rs  aws_config.rs  form.rs  form_ops.rs  mod.rs  regions.rs  tui_error.rs
src/tui/manager/: handlers.rs  mod.rs  render.rs
src/util/: atomic_write.rs  mod.rs  perms.rs
